--- a/assets/css/text.css
+++ b/assets/css/text.css
@@ -44,9 +44,6 @@
   width: 35px;
   padding-bottom: 8px;
 }
-.text-iconGoogle {
-  width: 25px!important;
-}
 .text-fontOrange {
   color: var(--orange);
 }
@@ -68,6 +65,9 @@
 .text-titleServices {
   padding-left: 160px;
   display: flex;
+  position: absolute;
+  top: 800px;
+  z-index: 1;
 }
 .text-titleServices h2 {
   padding-top: 20px;
@@ -79,6 +79,9 @@
 }
 .text-fontPurple {
   color: var(--purple);
+}
+.text-fontWhite {
+  color: white;
 }
 .text-imgServices {
   position: relative;
@@ -92,8 +95,46 @@
   background-color: white;
   border-top: 10px solid var(--gray);
   border-right: 10px solid var(--gray);
+  border-bottom: 2px solid var(--black);
+  border-left: 1px solid var(--black);
   padding-top: 3%;
   padding-bottom: 3%;
+  padding-left: 100px;
+  padding-right: 100px;
   font-weight: bold;
-
+}
+.text-infoWifiAtm {
+  background-color: var(--gray);
+  margin-left: 80px;
+  margin-right: 80px;
+  padding-top: 150px;
+  padding-bottom: 100px;
+  padding-left: 150px;
+  padding-right: 150px;
+}
+.text-servicesWifiIcon {
+  padding-right: 80px;
+}
+.text-wifi {
+  display: flex;
+  padding-bottom: 50px;
+}
+.text-atm {
+  display: flex;
+}
+.text-etInfo {
+  width: 50%;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  border-top: 10px solid var(--gray);
+  border-right: 10px solid var(--gray);
+  border-bottom: 2px solid var(--black);
+  border-left: 1px solid var(--black);
+  padding-top: 2%;
+  padding-bottom: 2%;
+  padding-left: 80px;
+  padding-right: 80px;
 }
