--- a/assets/css/text.css
+++ b/assets/css/text.css
@@ -2,7 +2,9 @@
   color: var(--orange);
   display: flex;
   justify-content: center;
-  font-family: "Helvetica Neue LT Std 77 Bold Condensed" sans-serif;
+  font-family: "Helvetica Neue LT Std 47 Light Condensed";
+  font-weight: bold;
+  font-size: 3.5rem;
 }
 .text-header {
   height: 797px;
@@ -21,12 +23,14 @@
   padding-top: 55px;
   position: absolute;
   bottom: 0;
+  font-family: "Helvetica Neue LT Std 47 Light Condensed";
+  font-size: 1rem;
 }
 .text-buttonDecouvrir {
   border: 1px solid white;
   background-color: var(--orange);
   color: white;
-  width: 30%;
+  width: 23%;
   font-size: 0.7rem;
   margin-bottom: 40px;
 }
@@ -51,6 +55,7 @@
   color: var(--black);
 }
 .text-breadcrumbs {
+  font-family: "Helvetica Neue LT Std 57 Condensed";
   display: flex;
   margin-top: 45px;
   margin-bottom: 45px;
@@ -63,6 +68,7 @@
   font-size: 1rem;
 }
 .text-titleServices {
+  font-family: "Helvetica Neue LT Std 47 Light Condensed";
   padding-left: 160px;
   display: flex;
   position: absolute;
@@ -71,11 +77,11 @@
 }
 .text-titleServices h2 {
   padding-top: 20px;
+  font-weight: bold;
 }
 .text-iconRestau {
   width:8rem;
   padding-left: 20px;
-
 }
 .text-fontPurple {
   color: var(--purple);
@@ -90,6 +96,9 @@
   width: 100%;
 }
 .text-encadreText {
+  font-family: "Helvetica Neue LT Std 57 Condensed";
+  font-size: 1.3rem;
+  text-align: center;
   margin-left: 160px;
   margin-right: 160px;
   background-color: white;
@@ -102,8 +111,13 @@
   padding-left: 100px;
   padding-right: 100px;
   font-weight: bold;
+  position: absolute;
+  z-index: 2;
+  top: 1350px;
 }
 .text-infoWifiAtm {
+  font-family: "Helvetica Neue LT Std 57 Condensed";
+  font-size: 1rem;
   background-color: var(--gray);
   margin-left: 80px;
   margin-right: 80px;
@@ -123,6 +137,8 @@
   display: flex;
 }
 .text-etInfo {
+  font-family: "Helvetica Neue LT Std 57 Condensed";
+  font-size: 1rem;
   width: 50%;
   margin: auto;
   display: flex;
