--- a/assets/css/detail.css
+++ b/assets/css/detail.css
@@ -14,9 +14,14 @@
 }
 
 /* TYPO */
+.detail {
+  font-family: "Helvetica Neue LT Std 57 Condensed";
+}
+.detail-description {
+  font-size: 1.8rem;
+}
 .detail h1, h2, h3, h4, .detail-price p {
   color : var(--orange);
-  font-family: "Helvetica Neue LT Std 57 Condensed";
 }
 .detail h1{
   font-size: 4rem;
@@ -78,7 +83,6 @@
   width: 567px;
   height: 460px;
 }
-
 .detail-accecibiltyPartBgOrange {
   background-color : var(--orange);
   bottom: 0;
@@ -94,7 +98,14 @@
 .detail-accecibiltyPartIcon {
   margin-top: -15px;
 }
-
+/* SECTION CARTE */
+.detail-map iframe {
+  width: 100%;
+  height:100%;
+}
+.detail-map {
+  height: 640px;
+}
 
 /*FOOTER*/
 
