--- a/assets/css/text.css
+++ b/assets/css/text.css
@@ -1,13 +1,12 @@
 .text-h1 {
   color: var(--orange);
   display: flex;
-  justify-content: center;
   font-family: "Helvetica Neue LT Std 47 Light Condensed";
   font-weight: bold;
   font-size: 3.5rem;
 }
 .text-header {
-  height: 797px;
+  height: 800px;
   position: relative;
 }
 .text-imgBanner {
@@ -72,8 +71,8 @@
   padding-left: 160px;
   display: flex;
   position: absolute;
-  top: 800px;
-  z-index: 1;
+  z-index: 2;
+  margin-top: -55px;
 }
 .text-titleServices h2 {
   padding-top: 20px;
@@ -90,7 +89,8 @@
   color: white;
 }
 .text-imgServices {
-  position: relative;
+
+
 }
 .text-imgServices img{
   width: 100%;
@@ -111,9 +111,8 @@
   padding-left: 100px;
   padding-right: 100px;
   font-weight: bold;
+  margin-top: -40px;
   position: absolute;
-  z-index: 2;
-  top: 1350px;
 }
 .text-infoWifiAtm {
   font-family: "Helvetica Neue LT Std 57 Condensed";
@@ -125,6 +124,8 @@
   padding-bottom: 100px;
   padding-left: 150px;
   padding-right: 150px;
+  margin-top: 80px;
+
 }
 .text-servicesWifiIcon {
   padding-right: 80px;
@@ -141,9 +142,6 @@
   font-size: 1rem;
   width: 50%;
   margin: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   background-color: white;
   border-top: 10px solid var(--gray);
   border-right: 10px solid var(--gray);
@@ -153,4 +151,42 @@
   padding-bottom: 2%;
   padding-left: 80px;
   padding-right: 80px;
+  margin-top: -40px;
+}
+.text-symboleEt {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: -75px;
+}
+.text-infoText {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 40px;
+}
+.text-transport {
+  background-color: var(--purple);
+  height: 1388px;
+  margin-top: 150px;
+}
+.text-titleTransport {
+  font-family: "Helvetica Neue LT Std 47 Light Condensed";
+  padding-right: 160px;
+  display: flex;
+  text-align: right;
+  justify-content: flex-end;
+  position: absolute;
+  z-index: 2;
+  margin-top: -40px;
+  right: 0;
+}
+.text-titleTransport h2 {
+  padding-left: 10px;
+}
+.text-iconTransport {
+  width: 25%;
+  position: relative;
+  bottom: 62px;
+
 }
