--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -69,16 +69,52 @@
 .home-containerAgenda{
   background-color: var(--purple);
   width: auto;
-  height: 932px;
+  height: 1100px;
 }
 
 .home-titreAgenda{
   font-family: 'Helvetica Neue LT Std 77 Bold Condensed';
   font-size: 75px;
   margin-top: 50px;
+  color: var(--orange)
 }
 
 .home-catAgenda{
   font-family: 'Helvetica Neue LT Std 57 Condensed';
   margin-top: 75px;
+}
+
+.home-listeAgenda::first-letter{
+  font-size: 150%;
+}
+
+.home-containerAgendaPhoto{
+  margin-top: 40px;
+}
+
+
+.home-agendaSlider{
+  top: 28rem;
+  left: 74rem;
+  width: 515px;
+  height: 450px;
+  float: right;
+}
+
+
+.home-prev{
+  background-color: red;
+  opacity: 1;
+}
+
+
+.home-listeAgenda:hover {
+  line-height: 24px;
+  transition: transform .5s ease;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 2px;
+    background: $hover;
+    transform:  translateX(-100%);
 }
