--- a/assets/css/detail.css
+++ b/assets/css/detail.css
@@ -1,3 +1,30 @@
+/* FONTS */
+
+@font-face {
+    font-family:'sirichana';
+    src: url('../fonts/detail/1 Bold.eot');
+	  src: url('../fonts/detail/1 Bold.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/detail/1 Bold.woff2') format('woff2'),
+		url('../fonts/detail/1 Bold.woff') format('woff'),
+		url('../fonts/detail/1 Bold.svg#1 Bold') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    unicode-range: U+0-10FFFF;
+}
+
+@font-face {
+    font-family:'sirichana';
+    src: url('../fonts/detail/1 Regular.eot');
+	  src: url('../fonts/detail/1 Regular.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/detail/1 Regular.woff2') format('woff2'),
+		url('../fonts/detail/1 Regular.woff') format('woff'),
+		url('../fonts/detail/1 Regular.svg#1 Regular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    unicode-range: U+0-10FFFF;
+}
 
 /* TYPO */
 .detail {
@@ -35,9 +62,11 @@
 }
 /* GENERAL */
 .detail-boxShadow {
-  box-shadow: 0px 0px 30px grey;
+  box-shadow: 0px 10px 20px grey;
 }
-
+.detail a:hover {
+  text-decoration: none;
+}
 /* BURGER MENU NAV*/
 #detail-burgerMenuDropDown {
   background-color : var(--orange);
@@ -58,6 +87,16 @@
 .detail-BurgerMenuDropDownDescription {
   margin-top: -40px;
 }
+.detail-BurgerMenuDropDownDescription a {
+  color: white;
+}
+.detail-BurgerMenuDropDownDescription a {
+  text-decoration: none;
+}
+#detail-burgerMenuDropDown h2:hover  {
+  font-size: 3.5rem;
+}
+
 
 /* NAV */
 .detail-titleStar {
@@ -68,12 +107,58 @@
 }
 
 /* HEADER */
-.detail-banner {
+#detail-banner {
   background: url('../images/detail/header.jpg');
   height: 692px;
 }
+          /* MODAL */
 
+     /* The Modal (background) */
+     .modal-1 {
+       display: none;
+       position: fixed;
+       z-index: 1;
+       left: 0;
+       top: 0;
+       width: 100%;
+       height: 100%;
+       overflow: auto;
+       background-color: rgb(0,0,0);
+       background-color: rgba(0,0,0,0.9);
+       padding-left: 9rem;
+       padding-top: 15rem;
+     }
 
+     @keyframes zoom {
+       from {transform:scale(0)}
+
+       to {transform:scale(1)}
+     }
+
+     /* The Close Button */
+     .close {
+       position: absolute;
+       top: 15px;
+       right: 35px;
+       color: #f1f1f1;
+       font-size: 40px;
+       font-weight: bold;
+       transition: 0.3s;
+     }
+
+     .close:hover,
+     .close:focus {
+       color: #bbb;
+       text-decoration: none;
+       cursor: pointer;
+     }
+
+     /* 100% Image Width on Smaller Screens */
+     @media only screen and (max-width: 700px){
+       .modal-content {
+         width: 100%;
+       }
+     }
 /*SECTION DESCRIPTION */
 
 
@@ -92,6 +177,7 @@
 .detail-confortMoreCircle:hover {
   background-color: var(--purple);
   border: none;
+  cursor: url(hand.cur), pointer;
 }
 
 #detail-confortMore {
@@ -162,6 +248,33 @@
   margin-top: -15px;
 }
 
+.detail-price {
+  height: 835px;
+  padding-left: 3rem;
+  padding-right: 5rem;
+}
+.detail-price h3::first-letter {
+  font-size: 2.5rem;
+}
+
+.detail-price h3 + p {
+  font-family: "sirichana";
+  font-size: 2rem;
+}
+.detail-price h3 + p > span {
+  font-size: 3rem;
+}
+.detail-price h3 + p > span > span {
+  font-size: 1.5rem;
+}
+
+.detail-price h3 + p::first-letter {
+  font-size: 2.5rem;
+  font-weight: 600;
+}
+
+
+
 
 /* SECTION CARTE */
 .detail-map iframe {
@@ -176,13 +289,54 @@
 
 footer {
   background-color: var(--orange);
-  height: 960px;
+  height: 800px;
 }
-
+.footer-guide, footer button, .footer-network{
+  font-family: "sirichana";
+  font-weight: bold;
+}
+footer button{
+  font-size: 1.4rem;
+  border : 2px solid #b9532b;
+  border-radius: .1rem;
+}
+footer button:hover{
+  background-color: white;
+  color: var(--orange);
+}
+footer hr {
+  height: 600px;
+  width : 3px;
+  background-color: white;
+}
+.footer-lign {
+  border-left: 3px solid white;
+  margin-top: 5rem;
+}
+.footer-btn-brochure{
+  width: 190px;
+  margin: auto;
+}
+.footer-btn-newletter {
+  width: 320px;
+  margin: auto;
+}
+.footer-btn-newletter:active {
+  background-color: white;
+  color: var(--orange);
+}
 .button-group {
   width: 20rem;
 }
-
-.button-group button {
-  font-size: .9rem;
+footer h5 {
+  font-size: 2.2rem;
+  font-weight: bold;
+}
+footer h5 + p {
+  font-size: 1.8rem;
+  line-height: 1.2rem;
+}
+.footer-network {
+  padding-left: 7.8rem;
+  font-size: 1.5rem;
 }
