--- a/assets/css/text.css
+++ b/assets/css/text.css
@@ -102,8 +102,8 @@
   margin-left: 160px;
   margin-right: 160px;
   background-color: white;
-  border-top: 10px solid var(--gray);
-  border-right: 10px solid var(--gray);
+  border-top: 10px solid #c9c8c9;
+  border-right: 10px solid #c9c8c9;
   border-bottom: 2px solid var(--black);
   border-left: 1px solid var(--black);
   padding-top: 3%;
@@ -143,8 +143,8 @@
   width: 50%;
   margin: auto;
   background-color: white;
-  border-top: 10px solid var(--gray);
-  border-right: 10px solid var(--gray);
+  border-top: 10px solid #c9c8c9;
+  border-right: 10px solid #c9c8c9;
   border-bottom: 2px solid var(--black);
   border-left: 1px solid var(--black);
   padding-top: 2%;
@@ -167,8 +167,10 @@
 }
 .text-transport {
   background-color: var(--purple);
-  height: 1388px;
+  height: 900px;
   margin-top: 150px;
+  position: relative;
+  z-index: 2;
 }
 .text-titleTransport {
   font-family: "Helvetica Neue LT Std 47 Light Condensed";
@@ -216,4 +218,88 @@
 }
 .text-logoCompagnies img {
   width: 80%;
+}
+.text-titleNavette {
+  font-family: "Helvetica Neue LT Std 47 Light Condensed";
+  background-color: white;
+  width:30%;
+  border-radius: 8px;
+  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  position: absolute;
+  top: 130px;
+  left: 80px;
+  z-index: 2;
+}
+.text-pNavette {
+  font-family: "Helvetica Neue LT Std 47 Light Condensed";
+  background-color: white;
+  width: 60%;
+  border-radius: 8px;
+  text-align: center;
+  padding-top: 150px;
+  padding-bottom: 50px;
+  padding-left: 30px;
+  padding-right: 30px;
+  position: absolute;
+  margin-top: -120px;
+  left: 220px;
+  z-index: -1;
+}
+.text-pBus {
+  font-family: "Helvetica Neue LT Std 47 Light Condensed";
+  background-color: white;
+  text-align: justify;
+  width: 60%;
+  border-radius: 8px;
+  padding-top: 150px;
+  padding-bottom: 70px;
+  padding-left: 30px;
+  padding-right: 30px;
+  position: absolute;
+  margin-top: -120px;
+  left: 190px;
+  bottom: -187px;
+  z-index: -1;
+}
+.text-navette img {
+  width: 60%;
+  position: relative;
+  margin-left: 130px;
+  margin-top: 180px;
+}
+.text-bus img {
+  width: 60%;
+  position: relative;
+  margin-right: 200px;
+  margin-top: 180px;
+}
+.text-bus {
+  display: flex;
+  justify-content: flex-end;
+}
+.text-titleBus {
+  font-family: "Helvetica Neue LT Std 47 Light Condensed";
+  background-color: white;
+  width:30%;
+  border-radius: 8px;
+  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  position: absolute;
+  top: 130px;
+  right: 500px;
+  z-index: 2;
+}
+.text-chevronGauche {
+  width: 10%;
+  position: absolute;
+  top: 70%;
+}
+.text-chevronDroit {
+  width: 10%;
+  position: absolute;
+  top: 70%;
+  right: 20px;
 }
