--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,120 +1,156 @@
 
 
+
+/*--Indicator-Carousel-Header--*/
 .home-carouselIndicators li{
-  margin-right: 15px;
-  width: 30px;
-  height: 30px;
-  opacity: 100%;
-  border-radius: 100%;
-  background-color: var(--orange);
+  margin-right: 15px; width: 30px; height: 30px; opacity: 100%; border-radius: 100%; background-color: var(--orange);
 }
-
 .home-carouselIndicators .active{
-    background-color: var(--purple);
+  background-color: var(--purple);
 }
-
+/*--Logo-Header--*/
 .home-logoBan{
-  width: 115px;
-  height: auto;
-  top: 30px;
-  margin-left: auto;
-  margin-right: auto;
-  left: 0;
-  right: 0;
-  text-align: center;
+  width: 115px; height: auto;top: 30px;  margin-left: auto;  margin-right: auto;  left: 0;  right: 0;  text-align: center;
 }
-
+/*--Dropdown-Langage--*/
 .home-langagePicker{
-  width: 115px;
-  height: auto;
-  top: 30px;
-  margin-left: auto;
-  margin-right: auto;
-  left: 105rem;
-  right: 0;
-  text-align: center;
+  width: 115px;  height: auto;  top: 30px;  margin-left: auto;  margin-right: auto;  left: 105rem;  right: 0;  text-align: center;
 }
-
-
-
+/*--Mini-slider-Header--*/
 .home-miniSliderImg{
-  overflow: hidden;
-  width:194px;
-  top: 40rem;
-  right: 20rem;
+  overflow: hidden;  width:320px;  top: 40rem;  right: 20rem;
 }
-
+.home-innerCarouselMiniSlider{
+  padding-left: 60px;
+  padding-right: 60px;
+}
 .home-miniSliderControlPrev{
-  right: 100px;
+  width: 50px;
+  height: auto;
+  left: 0px;
+  top: 50px;
+  opacity: 100%;
+}
+.home-miniSliderControlNext{
+  width: 50px;
+  height: auto;
+  right: 0px;
+  top: 50px;
+  opacity: 100%;
 }
 
-
-.carousel-control .glyphicon-chevron-right, .carousel-control .icon-next {
-  right: 0;  //or you can increase this
+/*--Container-Covid--*/
+.hom-containerCovid{
+  height: 80px;  background-color: var(--orange);
 }
-
-.carousel-control .glyphicon-chevron-left, .carousel-control .icon-prev {
-  left: 0; //or you can increase this
-}
-
-.container-covid{
-  height: 80px;
-  background-color: var(--orange);
-}
-
 .home-textCovid{
   text-align: center;
 }
 
+/*--Container-Agenda--*/
 .home-containerAgenda{
-  background-color: var(--purple);
-  width: auto;
-  height: 1100px;
+  width: auto;  height: 1100px;
 }
-
 .home-titreAgenda{
-  font-family: 'Helvetica Neue LT Std 77 Bold Condensed';
-  font-size: 75px;
-  margin-top: 50px;
-  color: var(--orange)
+  font-family: 'Helvetica Neue LT Std 77 Bold Condensed';  font-size: 75px;  margin-top: 50px;  color: var(--orange)
 }
-
 .home-catAgenda{
-  font-family: 'Helvetica Neue LT Std 57 Condensed';
-  margin-top: 75px;
+  font-family: 'Helvetica Neue LT Std 57 Condensed';  margin-top: 75px;
 }
-
+.home-catAgenda a{
+  text-decoration:none;
+}
 .home-listeAgenda::first-letter{
   font-size: 150%;
 }
-
 .home-containerAgendaPhoto{
   margin-top: 40px;
 }
-
-
 .home-agendaSlider{
-  top: 28rem;
-  left: 74rem;
-  width: 515px;
-  height: 450px;
-  float: right;
+  top: 28rem;  left: 74rem;  width: 515px;  height: 450px;  float: right;
+}
+.home-listeAgenda {
+  text-align: center;
+}
+.home-catAgenda a {
+  color: var(--black);  text-transform: uppercase;  display: inline-block;  position: relative;
+}
+.home-catAgenda a:after {
+  background: none repeat scroll 0 0 transparent;  bottom: 0;  content: "";  display: block;  height: 2px;  left: 50%;  position: absolute;  background: var(--orange);  transition: width 0.3s ease 0s, left 0.3s ease 0s;  width: 0;
+}
+.home-catAgenda a:hover:after {
+  width: 100%;  left: 0;
+}
+.home-carouselControlIconAgenda{
+  width: 50px;  height: auto;
+}
+.home-agendaSliderControlnext{
+  top: 26rem;  right: 10rem;  opacity: 100%;
+}
+.home-agendaSliderControlPrev{
+  top: 26rem;  left: 10rem;  opacity: 100%;
 }
 
-
-.home-prev{
-  background-color: red;
-  opacity: 1;
+/*--Container-Visit--*/
+.home-containerVisite{
+  background-color: #333333;  height: 800px;  display: flex;  justify-content: center;
+}
+.home-visiteRow1{
+  margin-top: 50px;
+}
+.home-imgTitle1{
+  width: 300px;  height: auto;
+}
+.home-imgTitle2{
+  width: 220px;  height: auto;
+}
+.home-txtTitle{
+  font-family: 'Helvetica Neue LT Std 47 Light Condensed';  font-size: 30px;
+}
+.home-containerSlider{
+  margin-top: 250px;
+}
+.home-imgSlider1{
+  width: 382px;  height: 513px;  box-shadow: 0px 5px 10px 1px rgba(238, 0, 255, .2);
+}
+.home-imgSlider2{
+  width: 860px;  height: 513px;  box-shadow: 0px 5px 10px 1px rgba(238, 0, 255, .2);
+}
+.home-imgSlider3{
+  width: 382px;  height: 513px;  box-shadow: 0px 5px 10px 1px rgba(238, 0, 255, .2);
 }
 
+/*--Container-Activités--*/
+.home-logoServices{
+  width: 105px;  height: 105px;
+}
+.home-wrapperLogoServices{
+  background-color: #333333;  padding-bottom: 20px;
+}
 
-.home-listeAgenda:hover {
-  line-height: 24px;
-  transition: transform .5s ease;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 2px;
-    background: $hover;
-    transform:  translateX(-100%);
+/*--Container-Share--*/
+.home-containerShare{
+  padding-top: 100px;  background-color: #333333;  height: 260px;  width: 100%;
+}
+.home-htVisitBeauvais{
+  color: var(--purple)
+}
+.home-txtShare{
+  font-family: 'Helvetica Neue LT Std 47 Light Condensed';  font-size: 35px;
+}
+
+/*--Social-Wall--*/
+.home-containerSocialWall{
+  background-color: #d0a1d0;  padding: 50px;  width: 100%;  height: 1000px;
+}
+
+/* BURGER MENU NAV*/
+
+
+
+/*--media-queries--*/
+@media (max-width: 700px){
+  .home-megaWrapper{
+    display: none;
+  }
 }
