--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -148,9 +148,119 @@
 
 
 
+
+
 /*--media-queries--*/
 @media (max-width: 700px){
   .home-megaWrapper{
     display: none;
   }
+}
+
+/*--MOBILE--*/
+.home-mobileContainerHeader{
+  background-color: white;
+}
+
+.home-mobileContainerCovid{
+  background-color: var(--orange);
+  width: auto;
+  height: 40px;
+  text-align: center;
+  padding-top: 5px;
+  font-family: 'Helvetica Neue LT Std 77 Bold Condensed';
+  font-size: 20px;
+}
+
+.home-mobileTextAgenda1{
+  margin-top: 10px;
+  margin-left: 5px;
+  margin-bottom: 0px;
+  font-family: 'Helvetica Neue LT Std 57 Condensed';
+  color: var(--orange);
+  font-size: 28px;
+}
+
+.home-mobileTextAgenda2{
+  margin-top: 0px;
+  margin-left: 5px;
+  font-family: 'Helvetica Neue LT Std 57 Condensed';
+  color: var(--purple);
+  font-size: 20px;
+}
+
+.home-mobileImgAgenda{
+  width: 230px;
+  height: 130;
+  text-align: center;
+}
+
+.home-mobileAgendaDateMois{
+  font-family: 'Helvetica Neue LT Std 57 Condensed';
+  color: var(--purple);
+  text-align: center;
+  margin-bottom: 0px;
+}
+.home-mobileAgendaDateMois{
+  font-size: 80%;
+}
+
+.home-mobileAgendaSousTitre{
+  font-family: 'Helvetica Neue LT Std 57 Condensed';
+  text-align: center;
+  margin-top: 0px;
+}
+
+.home-mobileAgendaFlechePrev{
+  width: 25px;
+  height: auto;
+  margin-left: 2rem;
+  margin-right: 2rem;
+}
+
+.home-mobileAgendaFlecheNext{
+  width: 25px;
+  height: auto;
+  margin-left: 2rem;
+  margin-right: 2rem;
+}
+
+.home-mobileAgendaBouton{
+  margin-right: 1rem;
+}
+
+.home-mobileContainerActivites{
+  background-color: #333333;
+}
+
+.home-mobileLogoActivites{
+  width: 40px;
+  height: 40px;
+  margin-top: 50px;
+}
+
+.home-mobileContainerForfaits1{
+  background-color: var(--orange);
+  height: 100px;
+  text-align: center;
+  font-family: 'Helvetica Neue LT Std 77 Bold Condensed';
+  font-size: 20px;
+  padding: 40px;
+}
+
+.home-mobileContainerForfaits2{
+  background-color: var(--purple);
+  height: 100px;
+  text-align: center;
+  font-family: 'Helvetica Neue LT Std 77 Bold Condensed';
+  font-size: 20px;
+  padding: 40px;
+}
+
+.home-mobileHotelImg1{
+  margin-top: 40px;
+}
+
+.home-mobileHotelImg2{
+  margin-top: 40px;
 }
