--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,5 +1,41 @@
 
 
+/* BURGER MENU NAV*/
+#detail-burgerMenuDropDown {
+  background-color : var(--orange);
+  height: 1000px;
+  display: none;
+  position: relative;
+  z-index: 2;
+}
+.detail-container {
+  margin-top : -50px;
+}
+#detail-burgerMenuDropDown h2 {
+
+  font-weight: 700;
+  font-size: 3rem;
+  }
+#detail-burgerMenu nav {
+  height: 160px;
+  top: 50px;
+  z-index: 1;
+}
+.detail-BurgerMenuDropDownDescription {
+  margin-top: -40px;
+}
+.detail-BurgerMenuDropDownDescription a {
+  color: white;
+}
+.detail-BurgerMenuDropDownDescription a {
+  text-decoration: none;
+}
+#detail-burgerMenuDropDown h2:hover  {
+  font-size: 3.5rem;
+}
+
+
+
 
 /*--Indicator-Carousel-Header--*/
 .home-carouselIndicators li{
@@ -120,6 +156,11 @@
   width: 382px;  height: 513px;  box-shadow: 0px 5px 10px 1px rgba(238, 0, 255, .2);
 }
 
+.home-acordeonForfait{
+  width: 1903px;
+  height: auto;
+}
+
 /*--Container-Activités--*/
 .home-logoServices{
   width: 105px;  height: 105px;
@@ -151,11 +192,24 @@
 
 
 /*--media-queries--*/
-@media (max-width: 700px){
+@media (max-width: 900px){
   .home-megaWrapper{
     display: none;
   }
+  .home-megaWrapperMobile{
+    display: block;
+  }
 }
+
+@media (min-width: 900px){
+  .home-megaWrapper{
+    display: block;
+  }
+  .home-megaWrapperMobile{
+    display:none;
+  }
+}
+
 
 /*--MOBILE--*/
 .home-mobileContainerHeader{
@@ -195,6 +249,10 @@
   text-align: center;
 }
 
+.home-mobileAgendaMarginB{
+  margin-bottom: 40px;
+}
+
 .home-mobileAgendaDateMois{
   font-family: 'Helvetica Neue LT Std 57 Condensed';
   color: var(--purple);
@@ -227,16 +285,26 @@
 
 .home-mobileAgendaBouton{
   margin-right: 1rem;
+  margin-bottom: 20px;
 }
 
 .home-mobileContainerActivites{
   background-color: #333333;
 }
 
+.home-mobileContainerActivites p{
+  font-family: 'Helvetica Neue LT Std 57 Condensed';
+  color: var(--purple);
+}
+
+.home-mobileActiviteLogoRows{
+  text-align: center;
+}
+
 .home-mobileLogoActivites{
   width: 40px;
   height: 40px;
-  margin-top: 50px;
+  margin-top: 20px;
 }
 
 .home-mobileContainerForfaits1{
@@ -263,4 +331,28 @@
 
 .home-mobileHotelImg2{
   margin-top: 40px;
+}
+
+.home-mobileContainerPreFooter{
+  background-color: #333333;
+}
+
+.home-mobileTxtPreFooter{
+  font-family: 'Helvetica Neue LT Std 47 Light Condensed';
+  font-size: 20px;
+  margin-left: 20px;
+  padding-top: 20px;
+}
+
+.home-mobileHTPreFooter{
+  font-family: 'Helvetica Neue LT Std 77 Bold Condensed';
+  color: var(--purple);
+  font-size: 35px;
+}
+
+.home-mobileLogoPreFooter{
+  width: 120px;
+  height: auto;
+  margin-left: 20px;
+  margin-bottom: 20px;
 }
