--- a/assets/css/detail.css
+++ b/assets/css/detail.css
@@ -85,14 +85,16 @@
   font-size: 2rem;
 }
 footer h5 {
-  font-size: 2.2rem;
+  font-size: 2rem;
   font-weight: bold;
 }
 footer h5 + p {
-  font-size: 1.8rem;
+  font-size: 1.7rem;
   line-height: 1.2rem;
 }
-
+footer .footer-BeauvaisDescriptionDesktop{
+  font-size: .8rem;
+}
 /* GENERAL */
 .detail-boxShadow {
   box-shadow: 0px 10px 20px grey;
@@ -279,6 +281,7 @@ footer h5 + p {
 .detail-carouselSlide {
   margin-left: 3rem;
 }
+
 .detail-carouselDescription {
   top:5rem;
   right:5rem;
@@ -450,7 +453,7 @@ footer hr {
   #detail-burgerMenuDropDown h2 {
     color: white;
     font-weight: 700;
-    font-size: 2rem;
+    font-size: 1.5rem;
     padding-top: 0;
     line-height: 1rem;
     text-align: center;
@@ -462,22 +465,29 @@ footer hr {
     margin-top: 0px;
   }
   #detail-burgerMenuDropDown h2:hover  {
-    font-size: 2.5rem;
+    font-size: 1.8rem;
   }
   .detail-burgerMenuDropDownIcons {
     position: absolute;
     top: 5px;
     right: 0;
     flex-direction: row-reverse;
-    width: 10rem;
+    width: 5rem;
   }
   .detail-burgerMenuDropDownIcons img {
     margin-left: 1rem;
   }
+  .detail-burgerMenuDropDownIconMeteo{
+    width: 2rem;
+  }
+  .detail-burgerMenuDropDownIconLocation{
+    width: 1.2rem;
+  }
   .detail-burgerMenuDropDownIconDiscover {
     padding-bottom: 0;
-    width: 5rem;
+    width: 2rem;
   }
+
   .detail-burgerMenuDropDownIcon {
     padding-left: 1rem;
     padding-top: 1rem;
@@ -569,6 +579,7 @@ footer hr {
     display: flex;
     align-items: center;
     justify-content: center;
+    font-weight: bold;
   }
   .detail-priceMobileBgOrangeAdress {
     background-color : var(--orange);
