--- a/assets/css/text.css
+++ b/assets/css/text.css
@@ -1,32 +1,5 @@
-/*NAVBAR*/
-#detail-burgerMenuDropDown {
-  background-color : var(--orange);
-  height: 1000px;
-  display: none;
-}
-.detail-container {
-  margin-top : -50px;
-}
-#detail-burgerMenuDropDown h2 {
-  color: white;
-  font-weight: 700;
-  font-size: 3rem;
-}
-#detail-burgerMenu nav {
-  height: 160px;
-}
-.detail-BurgerMenuDropDownDescription {
-  margin-top: -40px;
-}
-.detail-BurgerMenuDropDownDescription a {
-  color: white;
-}
-.detail-BurgerMenuDropDownDescription a {
-  text-decoration: none;
-}
-#detail-burgerMenuDropDown h2:hover  {
-  font-size: 3.5rem;
-}
+/* PAGE TEXT - AEROPORT PARIS BEAUVAIS - LAURINE */
+
 .text-h1 {
   color: var(--orange);
   display: flex;
@@ -122,10 +95,6 @@
 .text-fontWhite {
   color: white;
 }
-.text-imgServices {
-
-
-}
 .text-imgServices img{
   width: 100%;
 }
@@ -158,7 +127,6 @@
   padding-left: 150px;
   padding-right: 150px;
   margin-top: 80px;
-
 }
 .text-servicesWifiIcon {
   padding-right: 80px;
@@ -225,6 +193,9 @@
   position: relative;
   bottom: 62px;
 }
+.text-carousselPoint {
+  display: none;
+}
 
 /*SECTION COMPAGNIES*/
 .text-compagnies {
@@ -245,7 +216,6 @@
   position: relative;
   bottom: 22px;
   left: 30px;
-
 }
 .text-logoCompagnies {
   padding-left: 160px;
@@ -345,7 +315,6 @@
 
 /*VERSION MOBILE*/
 @media (max-width: 767px){
-/*SECTION NAVBAR*/
 
 /*SECTION BANNER*/
 .text-containerBanner {
@@ -476,6 +445,10 @@
 }
 .text-transport {
   height: 500px;
+}
+.text-carousselPoint {
+  display: flex;
+  margin-left: 28%;
 }
 
 /*SECTION COMPAGNIES*/
