--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -2,24 +2,17 @@
 
 /* BURGER MENU NAV*/
 #detail-burgerMenuDropDown {
-  background-color : var(--orange);
-  height: 1000px;
-  display: none;
-  position: relative;
-  z-index: 2;
+  background-color : var(--orange);  height: 1000px;  display: none;  position: relative;  z-index: 2;
 }
 .detail-container {
   margin-top : -50px;
 }
 #detail-burgerMenuDropDown h2 {
 
-  font-weight: 700;
-  font-size: 3rem;
+  font-weight: 700;  font-size: 3rem;
   }
 #detail-burgerMenu nav {
-  height: 160px;
-  top: 50px;
-  z-index: 1;
+  height: 160px;  top: 50px;  z-index: 1;
 }
 .detail-BurgerMenuDropDownDescription {
   margin-top: -40px;
@@ -57,22 +50,13 @@
   overflow: hidden;  width:320px;  top: 40rem;  right: 20rem;
 }
 .home-innerCarouselMiniSlider{
-  padding-left: 60px;
-  padding-right: 60px;
+  padding-left: 60px;  padding-right: 60px;
 }
 .home-miniSliderControlPrev{
-  width: 50px;
-  height: auto;
-  left: 0px;
-  top: 50px;
-  opacity: 100%;
+  width: 50px;  height: auto;  left: 0px;  top: 50px;  opacity: 100%;
 }
 .home-miniSliderControlNext{
-  width: 50px;
-  height: auto;
-  right: 0px;
-  top: 50px;
-  opacity: 100%;
+  width: 50px;  height: auto;  right: 0px;  top: 50px;  opacity: 100%;
 }
 
 /*--Container-Covid--*/
@@ -157,8 +141,7 @@
 }
 
 .home-acordeonForfait{
-  width: 1903px;
-  height: auto;
+  width: 1903px;  height: auto;
 }
 
 /*--Container-Activités--*/
@@ -217,36 +200,19 @@
 }
 
 .home-mobileContainerCovid{
-  background-color: var(--orange);
-  width: auto;
-  height: 40px;
-  text-align: center;
-  padding-top: 5px;
-  font-family: 'Helvetica Neue LT Std 77 Bold Condensed';
-  font-size: 20px;
+  background-color: var(--orange);  width: auto;  height: 40px;  text-align: center;  padding-top: 5px;  font-family: 'Helvetica Neue LT Std 77 Bold Condensed';  font-size: 20px;
 }
 
 .home-mobileTextAgenda1{
-  margin-top: 10px;
-  margin-left: 5px;
-  margin-bottom: 0px;
-  font-family: 'Helvetica Neue LT Std 57 Condensed';
-  color: var(--orange);
-  font-size: 28px;
+  margin-top: 10px;  margin-left: 5px;  margin-bottom: 0px;  font-family: 'Helvetica Neue LT Std 57 Condensed';  color: var(--orange);  font-size: 28px;
 }
 
 .home-mobileTextAgenda2{
-  margin-top: 0px;
-  margin-left: 5px;
-  font-family: 'Helvetica Neue LT Std 57 Condensed';
-  color: var(--purple);
-  font-size: 20px;
+  margin-top: 0px;  margin-left: 5px;  font-family: 'Helvetica Neue LT Std 57 Condensed';  color: var(--purple);  font-size: 20px;
 }
 
 .home-mobileImgAgenda{
-  width: 230px;
-  height: 130;
-  text-align: center;
+  width: 230px;  height: 130;  text-align: center;
 }
 
 .home-mobileAgendaMarginB{
@@ -254,38 +220,26 @@
 }
 
 .home-mobileAgendaDateMois{
-  font-family: 'Helvetica Neue LT Std 57 Condensed';
-  color: var(--purple);
-  text-align: center;
-  margin-bottom: 0px;
+  font-family: 'Helvetica Neue LT Std 57 Condensed';  color: var(--purple);  text-align: center;  margin-bottom: 0px;
 }
 .home-mobileAgendaDateMois{
   font-size: 80%;
 }
 
 .home-mobileAgendaSousTitre{
-  font-family: 'Helvetica Neue LT Std 57 Condensed';
-  text-align: center;
-  margin-top: 0px;
+  font-family: 'Helvetica Neue LT Std 57 Condensed';  text-align: center;  margin-top: 0px;
 }
 
 .home-mobileAgendaFlechePrev{
-  width: 25px;
-  height: auto;
-  margin-left: 2rem;
-  margin-right: 2rem;
+  width: 25px;  height: auto;  margin-left: 2rem;  margin-right: 2rem;
 }
 
 .home-mobileAgendaFlecheNext{
-  width: 25px;
-  height: auto;
-  margin-left: 2rem;
-  margin-right: 2rem;
+  width: 25px;  height: auto;  margin-left: 2rem;  margin-right: 2rem;
 }
 
 .home-mobileAgendaBouton{
-  margin-right: 1rem;
-  margin-bottom: 20px;
+  margin-right: 1rem;  margin-bottom: 20px;
 }
 
 .home-mobileContainerActivites{
@@ -293,8 +247,7 @@
 }
 
 .home-mobileContainerActivites p{
-  font-family: 'Helvetica Neue LT Std 57 Condensed';
-  color: var(--purple);
+  font-family: 'Helvetica Neue LT Std 57 Condensed';  color: var(--purple);
 }
 
 .home-mobileActiviteLogoRows{
@@ -302,27 +255,15 @@
 }
 
 .home-mobileLogoActivites{
-  width: 40px;
-  height: 40px;
-  margin-top: 20px;
+  width: 40px;  height: 40px;  margin-top: 20px;
 }
 
 .home-mobileContainerForfaits1{
-  background-color: var(--orange);
-  height: 100px;
-  text-align: center;
-  font-family: 'Helvetica Neue LT Std 77 Bold Condensed';
-  font-size: 20px;
-  padding: 40px;
+  background-color: var(--orange);  height: 100px;  text-align: center;  font-family: 'Helvetica Neue LT Std 77 Bold Condensed';  font-size: 20px;  padding: 40px;
 }
 
 .home-mobileContainerForfaits2{
-  background-color: var(--purple);
-  height: 100px;
-  text-align: center;
-  font-family: 'Helvetica Neue LT Std 77 Bold Condensed';
-  font-size: 20px;
-  padding: 40px;
+  background-color: var(--purple);  height: 100px;  text-align: center;  font-family: 'Helvetica Neue LT Std 77 Bold Condensed';  font-size: 20px;  padding: 40px;
 }
 
 .home-mobileHotelImg1{
@@ -338,21 +279,13 @@
 }
 
 .home-mobileTxtPreFooter{
-  font-family: 'Helvetica Neue LT Std 47 Light Condensed';
-  font-size: 20px;
-  margin-left: 20px;
-  padding-top: 20px;
+  font-family: 'Helvetica Neue LT Std 47 Light Condensed';  font-size: 20px;  margin-left: 20px;  padding-top: 20px;
 }
 
 .home-mobileHTPreFooter{
-  font-family: 'Helvetica Neue LT Std 77 Bold Condensed';
-  color: var(--purple);
-  font-size: 35px;
+  font-family: 'Helvetica Neue LT Std 77 Bold Condensed';  color: var(--purple);  font-size: 35px;
 }
 
 .home-mobileLogoPreFooter{
-  width: 120px;
-  height: auto;
-  margin-left: 20px;
-  margin-bottom: 20px;
+  width: 120px;  height: auto;  margin-left: 20px;  margin-bottom: 20px;
 }
